--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ main {
 .choice {
   aspect-ratio: 1/1;
   width: 100%;
-  padding: 30px;
+  padding: 20px;
   border-radius: 100%;
   border: 5px solid #333;
   cursor: pointer;
@@ -96,8 +96,8 @@ main {
 }
 
 .choice > img {
-  width: 100%;
-  height: 100%;
+  width: 80%;
+  height: 80%;
 }
 
 .choice.green {
@@ -132,5 +132,10 @@ main {
     aspect-ratio: 1/1;
     width: 100%;
     padding: 20px;
+  }
+
+  .choice > img {
+    width: 100%;
+    height: 100%;
   }
 }
